src/main/default/objects/CatalogItemPriceBook__c/CatalogItemPriceBook__c.object-meta.xml
<CustomObject>
    <description>Track the Price Books where Catalog Item is used</description>
    <label>CatalogItemPriceBook</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>CatalogItemPriceBook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CatalogItemPriceBooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>