src/main/default/objects/CatalogItemPriceBook__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <label>Catalog Item</label>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>CatalogItemPriceBooks</relationshipLabel>
    <relationshipName>CatalogItemPriceBooks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>