src/main/default/objects/CatalogItemPriceBook__c/fields/IsDirty__c.field-meta.xml
<CustomField>
    <fullName>IsDirty__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag item for processing</description>
    <label>IsDirty</label>
    <type>Checkbox</type>
</CustomField>