src/main/default/objects/CatalogItemPriceBook__c/fields/JointKey__c.field-meta.xml
<CustomField>
    <fullName>JointKey__c</fullName>
    <externalId>true</externalId>
    <label>JointKey</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>