src/main/default/objects/CatalogItemPriceBook__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>CatalogItemPriceBooks</relationshipLabel>
    <relationshipName>CatalogItemPriceBooks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>