src/main/default/objects/CatalogItemPriceBook__c/fields/PriceBookIsActive__c.field-meta.xml
<CustomField>
    <fullName>PriceBookIsActive__c</fullName>
    <formula>Price_Book__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookIsActive</label>
    <type>Checkbox</type>
</CustomField>